--- a/Package.json
+++ b/Package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "sqlite3": "^5.1.6"
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
