--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "better-sqlite3": "^8.0.0",
-    "body-parser": "^1.20.0",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "connect-sqlite3": "^0.9.0"
+  "bcryptjs": "^2.4.3",
+  "better-sqlite3": "^8.0.0",
+  "body-parser": "^1.20.0",
+  "ejs": "^3.1.8",
+  "express": "^4.18.2",
+  "express-session": "^1.17.3",
+  "connect-sqlite3": "^0.9.0"
   }
 }
